# mudras

./: .gitignore  Cargo.toml  README.md  config.bad.kdl  config.kdl  flake.nix  package.nix  shell.nix
src/: config.kdl  config.rs  error.rs  input.rs  main.rs
src/backend/: tty.rs
src/cli/: mod.rs  utils.rs
src/config/: kdl.rs  mod.rs  utils.rs
src/input/: keyboard.rs  mod.rs  udev.rs  uinput.rs  utils.rs  wl.rs
src/input/virtuals/: constants.rs  mod.rs
src/server/: events.rs  mod.rs  signal.rs
