[package]
name = "mudras"
version = "0.1.1"
edition = "2021"

[dependencies]
bon = "3.6.5"
dirs = "6.0.0"
env_logger = "0.11.8"
evdev = { version = "0.13.1", features = ["stream-trait", "tokio"] }
knus = "3.3.1"
log = "0.4.27"
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.219", features = ["derive"] }
signal-hook = { version = "0.3.18", features = ["iterator"] }
signal-hook-async-std = "0.3.0"
signal-hook-tokio = "0.3.1"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-udev = "0.9.1"
