[package]
name = "mudras"
version = "0.1.1"
edition = "2021"

[dependencies]
bon = "3.6.5"
convert_case = "0.8.0"
dirs = "6.0.0"
env_logger = "0.11.8"
evdev = { version = "0.13.1", features = ["serde", "stream-trait", "tokio"] }
knus = "3.3.1"
log = "0.4.27"
miette = { version = "7.6.0", features = ["fancy"] }
pipelight_exec = "0.4.9"
pretty_assertions = "1.4.1"
serde = { version = "1.0.219", features = ["derive"] }
signal-hook = { version = "0.3.18", features = ["iterator"] }
signal-hook-async-std = "0.3.0"
signal-hook-tokio = "0.3.1"
smithay = "0.7.0"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-udev = "0.9.1"
