[package]
name = "mudras"
description = "A Hotkey daemon (keyboard shortcuts) for elite shinobi."
version = "0.1.2"
edition = "2021"

[dependencies]
bon = "3.6.5"
clap = "4.5.48"
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
convert_case = "0.8.0"
dirs = "6.0.0"
env_logger = "0.11.8"
evdev = { version = "0.13.2", features = ["serde", "stream-trait", "tokio"] }
futures = "0.3.31"
knus = "3.3.1"
log = "0.4.27"
miette = { version = "7.6.0", features = ["fancy"] }
pipelight_error = "0.2.14"
pipelight_exec = "0.4.9"
pretty_assertions = "1.4.1"
serde = { version = "1.0.219", features = ["derive"] }
signal-hook = { version = "0.3.18", features = ["iterator"] }
signal-hook-async-std = "0.3.0"
signal-hook-tokio = "0.3.1"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-udev = "0.9.1"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
